# aca.so

./: .coverage  .gitignore  README.md  database.py  docker-compose.yml  main.py  models.py  pyproject.toml  test_usecases.py  usecases.py
app/database/: gremlin.py  models.py
app/routes/: authors_routes.py  books_routes.py  people_routes.py  readers_routes.py
app/services/: __init__.py  books_services.py  people_services.py
app/services/authors_services/: create_authorship_service.py  list_books_by_author_service.py
app/services/books_services/: create_book_service.py  delete_book_service.py  get_book_by_id_service.py  get_book_service.py  list_books_service.py  update_book_service.py
app/services/people_services/: create_person_service.py  delete_person_service.py  get_person_by_id_service.py  get_person_service.py  list_people_service.py  (+1 more)
tests/: test_books.py  test_people.py
tests/test_authors_services/: test_create_authorship_service.py  test_list_books_by_author_service.py
tests/test_people_services/: test_create_person_service.py  test_delete_person_service.py  test_get_person_by_id_service.py  test_list_people_service.py  test_update_person_service.py
tests/test_readers_services/: test_create_rating_service.py  test_create_read_service.py  test_list_ratings_by_book_service.py  test_list_readers_by_book_service.py
tests/tests_book_services/: test_create_book_service.py  test_delete_book_service.py  test_get_book_by_id_service.py  test_list_books_service.py  test_update_book_service.py
usecases/: test_usecases.py  usecases.py
(+4 files in other folders)
