[tool.poetry]
name = "desafio-back"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^1.9.1"
gremlinpython = "<=3.4.3"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
httpx = "^0.24.0"
anyio = "^3.6.2"
aiogremlin = "^3.3.4"
pytest = "^7.3.0"
pytest-asyncio = "^0.21.0"
pytest-cov = "^4.0.0"
coverage = "^7.2.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
